Ajuste modo noturno e gatilho de mudança

--- a/Views/Usuario/Cadastro.cshtml
+++ b/Views/Usuario/Cadastro.cshtml
@@ -128,7 +128,7 @@
 </style>
 
 <body>
-    <button style="display: none" id="toggleDarkMode" class="btn-dark-mode">
+    <button id="toggleDarkMode" class="btn-dark-mode">
         <i class="fas fa-moon"></i>
     </button>
     <div class="container">
